# rust_trello_backend

./: .env  Cargo.toml  run_cm.sh
migrations/2024-01-11-142703_users/: up.sql
src/: main.rs
src/api/: mod.rs  users_api.rs
src/api/helpers/: mod.rs  user_api_helper.rs
src/db/: connection.rs  schema.rs
src/models/: roles.rs  users.rs
src/serials/: users.rs
