[package]
name = "trello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.111"
serde_derive = "1.0.195"
chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.6.1", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
diesel = { version = "2.1.4", features = ["sqlite", "postgres_backend", "postgres"] }
dotenvy = "0.15.7"
clap = { version = "4.4.14", features = ["derive"] }
